# IOT

./: .gitignore  BucleWhile.c  Ejercicio2.2  Ejercicio2.2.cpp
Ejerccios1Marcos/: CambiarMayYMin  CambiarMayYMin_REV2.c  CopiarString  CopiarString.c  CopiarStringREV2  CuentaPalabra.c  CuentaPalabraREV2  CuentaPalabraREV2.c  DiferenciasEntreFechas.c  DiferenciasEntreFechasREV2  EncontrarUnaSubcadena  EncontrarUnaSubcadena.c  EncontrarUnaSubcadenaREV2  EncontrarUnaSubcadenaREV2.c  ProductoComplejo.c
Ejercicio1/: BinarioDecimal.c  BucleWhile.c  SegundoGrado.c  TipoTriangulo.c
Ejercicio3/: Ej1_d.c  Eje1_a.c  Eje1_b.c  Eje1_c.c
Ejercico2/: Ej1Array.c  Ej2MaxMin.c  Ej4.c  Ejercicio2.2.cpp
LAB_Final_MQTT/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
LAB_Final_MQTT/components/audio_player/: CMakeLists.txt
LAB_Final_MQTT/components/task_c/: CMakeLists.txt
LAB_Final_MQTT/components/wifi_APSTA/: Diagrama_WIFI_STA.md
LAB_Final_MQTT/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  main.c
Lab1Placa/: CMakeLists.txt  sdkconfig  sdkconfig.defaults.esp32s2
Lab1Placa/main/: blink_example_main.c
Lab_Final/: sdkconfig  sdkconfig.old
Lab_Final/main/: CMakeLists.txt  audio_example.pcm
Lab_Final_1/: CMakeLists.txt  Informe laboratorio final.docx  convert_audio.py  particiones.csv  partitions.csv  sdkconfig  sdkconfig.ci.bsp  sdkconfig.defaults  sdkconfig.old
Lab_Final_1/components/touch_buttons/: CMakeLists.txt  touch_buttons.c
Lab_Final_1/components/touch_buttons/include/: touch_buttons.h
Lab_Final_1/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
Lab_Final_1/spiffs/: CMakeLists.txt  index.html
Lab_Final_1/spiffs_audio/: CMakeLists.txt
Laboratorio1/: CMakeLists.txt  build.py
Laboratorio1/components/Global/: Global.c
Laboratorio1/components/ejemplo_led_strip/: CMakeLists.txt
Laboratorio1/components/ejemplo_led_strip/src/: led_strip_rmt_ws2812.c
Laboratorio1/components/led_RGB/include/: led_rgb.h
Laboratorio1/components/led_delay/src/: led_delay.c
Laboratorio1/components/my_led_RGB/include/: led_rgb.h
Laboratorio1/components/my_led_RGB/src/: led_rgb.c
Laboratorio1/components/my_led_delay/: CMakeLists.txt
Laboratorio1/components/my_led_delay/include/: led_delay.h
Laboratorio1/components/my_led_delay/src/: led_delay.c
Laboratorio1/components/my_lib_1/: CMakeLists.txt
Laboratorio1/components/my_lib_1/include/: my_lib_1.h
Laboratorio1/components/my_lib_1_1/: my_lib_1_1.c
Laboratorio1/components/my_lib_1_1/include/: my_lib_1_1.h
Laboratorio1/components/my_lib_1_2/: my_lib_1_2.c
Laboratorio1/components/my_lib_1_2/include/: my_lib_1_2.h
Laboratorio1/components/my_lib_2/: CMakeLists.txt  my_lib_2.c
Laboratorio1/components/my_lib_2/include/: my_lib_2.h
Laboratorio1/main/: CMakeLists.txt  hello_world_main.c
Laboratorio1/src/: main.c
Laboratorio1_LED_RGB/: CMakeLists.txt
Laboratorio2/: CMakeLists.txt  sdkconfig
Laboratorio2/Laboratorio_2B_AP_STA/: CMakeLists.txt
Laboratorio2/main/: CMakeLists.txt  main.c
Laboratorio3/: CMakeLists.txt  sdkconfig  sdkconfig.old
Laboratorio3/main/: CMakeLists.txt  main.c
LaboratorioC/src/: main.c
LaboratorioLED/: sdkconfig
LaboratorioLED/main/: Kconfig.projbuild  blink_example_main.c
Laboratorios anteriores/LAB_Final_MQTT/: partitions.csv
Laboratorios anteriores/LAB_Final_MQTT/main/: CMakeLists.txt  Kconfig.projbuild  main.c
Laboratorios anteriores/Laboratorio2/: Laboratorio2.code-workspace
Laboratorios anteriores/LaboratorioC/: CMakeLists.txt
Laboratorios anteriores/LaboratorioC/components/Global/: CMakeLists.txt
Laboratorios anteriores/LaboratorioC/components/Global/include/: Global.h
Laboratorios anteriores/LaboratorioC/components/my_lib_2/: my_lib_2.c
Laboratorios anteriores/LaboratorioC/components/my_lib_2/include/: my_lib_2.h
Laboratorios anteriores/LaboratorioC/src/: main.c
Proyecto_Final/Implementacion_MQTT/: CMakeLists.txt  sdkconfig  sdkconfig.old
Proyecto_Final/Kaluga_HTTP_MP3_Player/: CMakeLists.txt  sdkconfig.old
Proyecto_Final/MQTT_5/: sdkconfig  sdkconfig.old
Proyecto_Hola_Mundo/: CMakeLists.txt  build.cmd
Proyecto_Hola_Mundo/src/: main.c
ejercicios_ejemplos_pruebas/Ejerccios1Marcos/: CopiarStringREV2.c  CuantaPalabras.cpp  DiferenciasEntreFechasREV2.c  EncontrarUnaSubcadenaREV2  SumarComplejos  SumarComplejosREV2
ejercicios_ejemplos_pruebas/Ejercicio1/: NumeroPerfecto.c
ejercicios_ejemplos_pruebas/Ejercicio3/: Ej1_d.c
ejercicios_ejemplos_pruebas/Ejercico2/: Ej3.c
(+162 files in other folders)
